fix(navbar): fixed leftside links from getting wrapped

--- a/styles/navbar/LeftSide.module.scss
+++ b/styles/navbar/LeftSide.module.scss
@@ -10,6 +10,8 @@
 	font-weight: 600;
 	margin-right: 2.2rem;
 	text-decoration: none;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 @media (max-width: 768px) {
